@@ -1,2 +1,9 @@
 Assignment 3, but with an GUI, and some error handling for values that are less than zero.
 
+Additionally, run the command with the following arguments:
+
+`java --module-path [INSERT PATH HERE] --add-modules javafx.controls -jar assignment14.jar`.
+
+Thanks!
+
+MidnightRaven12.
